add index dropping mechanism